# insurance_fine_tuning

./: main.py  pyproject.toml
src/: training.py  training_2.py  training_full_dataset.py
src/fine-tuned-model/gemma-insurance-lora/checkpoint-1067/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
src/tokenized_dataset/test/: data-00000-of-00001.arrow  state.json
src/tokenized_dataset/train/: state.json
src/tokenized_dataset/validation/: data-00000-of-00001.arrow  state.json
src/tokenized_dataset_1k_fast/test/: data-00000-of-00001.arrow  state.json
src/tokenized_dataset_1k_fast/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
src/tokenized_dataset_1k_fast/validation/: data-00000-of-00001.arrow  state.json
src/tokenized_dataset_1k_fixed/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
src/tokenized_dataset_1k_fixed/train/: data-00000-of-00001.arrow  state.json
src/tokenized_dataset_1k_fixed/validation/: data-00000-of-00001.arrow  state.json
