[project]
name = "insurance-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "tensorflow[and-cuda]>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "unsloth>=2026.1.2",
]
